--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Html Review - Home</title>
+    <link rel="stylesheet" href="./css/main.css">
+
   </head>
   <body>
     <h1> This is Html Review on Styles Branch</h1>
     <header>
       <nav>
         <ul>
-         <li><a href="#">HTML Review -Home</a></li>
+         <li class="active"><a href="./index.html">HTML Review -Home</a></li>
          <li><a href="#">HTML Review -Page 1</a></li>
          <li><a href="./page2.html">HTML Review -Page 2</a></li>
+         <li class="float-right"><a href="#">About</a></li>
         </ul>
       </nav>
-      <img src="http://placehold.it/250x250 "alt="placeholder Image"/>
+      <img id="header-img" src="http://placehold.it/700x250 "alt="placeholder Image"/>
     </header>
     <main>
       <h1> This is a headder</h1>
