--- a/index.html
+++ b/index.html
@@ -3,32 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Html Review - Home</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/main.css">
 
   </head>
   <body>
-    <h1> This is Html Review on Styles Branch</h1>
+    <h1 id="headline"> This is Html Review on Styles Branch</h1>
     <header>
       <nav>
         <ul>
          <li class="active"><a href="./index.html">HTML Review -Home</a></li>
          <li><a href="#">HTML Review -Page 1</a></li>
          <li><a href="./page2.html">HTML Review -Page 2</a></li>
-         <li class="float-right"><a href="#">About</a></li>
+         <li class="float-right"><a href="#"><i class="material-icons">cloud</i> About</a></li>
         </ul>
       </nav>
-      <img id="header-img" src="http://placehold.it/700x250 "alt="placeholder Image"/>
+      <img id="header-img" src="http://placehold.it/1400x275 "alt="placeholder Image"/>
     </header>
     <main>
       <h1> This is a headder</h1>
       <h3> This is also a headder</h3>
-      <h6> This is the smallest header</h6>
+      <h6 class="active"> This is the smallest header</h6>
       <br/>
       <br/>
       <!-- This is a commet-->
       <!-- TODO: take out this comment -->
-      <button type="button" name="my_button">Click Me</button>
-      <p>This is a paragthaph tag, it is used for multiple lines of text</p>
+      <div>
+        <button type="button" name="my_button">Click Me</button>
+        <p>This is a paragthaph tag, it is used for multiple lines of text</p>
+      </div>
+
+
 
 
     </main>
