--- a/page2.html
+++ b/page2.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Review - Page 2</title>
+      <link rel="stylesheet" href="./css/main.css">
+      <link rel="stylesheet" href="./css/page2.css">
   </head>
   <body>
+    <h1 id="headline">This is page number 2</h1>
     <header>
       <nav>
         <ul>
          <li><a href="./index.html">HTML Review -Home</a></li>
          <li><a href="#">HTML Review -Page 1</a></li>
-         <li><a href="#">HTML Review - page 2 </a></li>
+         <li class="active"><a href="#">HTML Review - page 2 </a></li>
         </ul>
       </nav>
-      <img src="http://placehold.it/250x250 "alt="placeholder Image"/>
+      <img id="header-img"src="http://placehold.it/1400x275 "alt="placeholder Image"/>
     </header>
     <table>
       <tr>
